--- a/plot_data.ipynb
+++ b/plot_data.ipynb
@@ -12,7 +12,7 @@
      "output_type": "stream",
      "text": [
       "MSFT\n",
-      "/home/michael/Share/project/Finance-App/data/MSFT Balance Sheet.csv\n"
+      "/Users/florist/Desktop/Projects/Finance-App/data/MSFT Balance Sheet.csv\n"
      ]
     },
     {
@@ -1227,7 +1227,7 @@
     }
    ],
    "source": [
-    "msft_cashflow['Cash and cash equivalents'].plot()"
+    "msft_cashflow['Cash and cash equivalents'].plot();"
    ]
   },
   {
@@ -4831,9 +4831,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "finance_app_env",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "finance_app_env"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -4845,7 +4845,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
