--- a/overlay_companies.ipynb
+++ b/overlay_companies.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 1,
    "metadata": {
     "scrolled": true
    },
@@ -12,11 +12,11 @@
      "output_type": "stream",
      "text": [
       "AMZN\n",
-      "/home/michael/Share/project/Finance-App/data/AMZN Balance Sheet.csv\n",
+      "/home/michael/projects/Finance-App/data/AMZN Balance Sheet.csv\n",
       "MSFT\n",
-      "/home/michael/Share/project/Finance-App/data/MSFT Balance Sheet.csv\n",
+      "/home/michael/projects/Finance-App/data/MSFT Balance Sheet.csv\n",
       "AAPL\n",
-      "/home/michael/Share/project/Finance-App/data/AAPL Balance Sheet.csv\n"
+      "/home/michael/projects/Finance-App/data/AAPL Balance Sheet.csv\n"
      ]
     }
    ],
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 2,
    "metadata": {
     "scrolled": true
    },
@@ -66,20 +66,13 @@
     }
    ],
    "source": [
-    "clean_sheets = []\n",
-    "for balance_sheet in balance_sheets:\n",
-    "    balance_sheet = balance_sheet.rename(columns={balance_sheet.columns[0]:'Timestamp'})\n",
-    "    balance_sheet = balance_sheet.set_index('Timestamp').T\n",
-    "    balance_sheet.index = pd.to_datetime(balance_sheet.index, format='%Y-%m')\n",
-    "    clean_sheets.append(balance_sheet)\n",
-    "    \n",
-    "columns = clean_sheets[0].columns\n",
+    "columns = balance_sheets[0].columns\n",
     "print(columns)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {
     "scrolled": false
    },
@@ -209,7 +202,7 @@
     "for col in cols_of_interest:\n",
     "    plt.figure()\n",
     "    for i in range(len(tickers)):\n",
-    "        plt.plot(clean_sheets[i].index, clean_sheets[i][columns[col]])\n",
+    "        plt.plot(balance_sheets[i].index, balance_sheets[i][columns[col]])\n",
     "\n",
     "    plt.legend(tickers)\n",
     "    plt.title(columns[col])\n",
@@ -219,9 +212,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "finance_app_env",
+   "display_name": "finance-app",
    "language": "python",
-   "name": "finance_app_env"
+   "name": "finance-app"
   },
   "language_info": {
    "codemirror_mode": {
@@ -233,7 +226,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.7.7"
   }
  },
  "nbformat": 4,
